--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Spring Data JPA Configuration
 spring.jpa.show-sql=true
 
-
-
 #Spring Data JPA Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=true
@@ -22,3 +20,8 @@ spring.jpa.hibernate.naming.physical-strategy=com.ecommerce.platform.shared.infr
 # Elements take their values from maven pom.xml build-related information
 documentation.application.description=@project.description@
 documentation.application.version=@project.version@
+
+
+# JWT Configuration Properties
+authorization.jwt.secret = WriteHereYourSecretStringForTokenSigningCredentials
+authorization.jwt.expiration.days = 7
